# 30122-project-truth-inquery

./: .gitignore  CPC_clinics.db  HPC_clinics.db  README.md  Tokens_CPC_clinics.db  Tokens_HPC_clinics.db  Untitled.ipynb  api.db  pyproject.toml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
database_model/: AlabamaTokens.db  api_requests.py  database.py  insurance_coverage.json  minors.csv  pyproject.toml  token_states.db
database_model/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
database_model/API data/: api_requests.py  token_states.db
database_model/API_data/: api_requests.py  gestational_limits.csv  insurance_coverage.csv  waiting_periods.json
project/crawler/: __main__.py  clean_data.py  crawler.py  download_data.py
project/data/: Alabama (AL).csv
project/output/: Mississippi tokens.csv
truth_inquery/: .gitignore  __main__.py
truth_inquery/analysis_model/: dataframe_cleaner.py  lpm.py  states.py  word_bag.py
truth_inquery/crawler/: __main__.py  clean_data.py  crawler.py  graphs.py  hc_urls.py  hcp_urls.py  hpc_urls.py
truth_inquery/data/: CPC_Alaska (AK).csv  CPC_Arizona (AZ).csv  CPC_California (CA).csv  CPC_Connecticut (CT).csv  CPC_Delaware (DE).csv  CPC_District of Columbia (DC).csv  CPC_Indiana (IN).csv  CPC_Iowa (IA).csv  CPC_Kansas (KS).csv  CPC_Maine (ME).csv  CPC_Maryland (MD).csv  CPC_Michigan (MI).csv  CPC_Minnesota (MN).csv  CPC_Montana (MT).csv  CPC_Nebraska (NE).csv  CPC_New York (NY).csv  CPC_North Carolina (NC).csv  CPC_Ohio (OH).csv  CPC_Oregon (OR).csv  CPC_Pennsylvania (PA).csv  CPC_Rhode Island (RI).csv  CPC_Utah (UT).csv  CPC_Vermont (VT).csv  CPC_Virginia (VA).csv  CPC_Wyoming (WY).csv  Colorado (CO).csv  Florida (FL).csv  Georgia (GA).csv  HPC_urls_AK.csv  HPC_urls_AZ.csv  HPC_urls_CA.csv  HPC_urls_CO.csv  HPC_urls_CT.csv  HPC_urls_DC.csv  HPC_urls_DE.csv  HPC_urls_FL.csv  HPC_urls_GA.csv  HPC_urls_HI.csv  HPC_urls_IA.csv  HPC_urls_IL.csv  (+35 more)
truth_inquery/database_model/: CPC_clinics.db  HPC_clinics.db  api.db  api_requests.py  database.py  gestational_limits.csv  minors.json  (+2 more)
(+185 files in other folders)
