[tool.poetry]
name = "truth-inquery"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "truth_inquery"}]

[tool.poetry.dependencies]
python = "^3.8.1,<4"
lxml = "^4.9.2"
ipython = "^8.8.0"
regex = "^2022.10.31"
scrapelib = "^2.1.0"
pytest = "^7.2.1"
requests = "^2.28.2"
pandas = "^1.5.3"
networkx = "^3.0"
matplotlib = "^3.7.0"
sklearn = "^0.0.post1"
scikit-learn = "^1.2.1"

[tool.poetry.group.dev.dependencies]
urllib3 = "^1.26.14"
selenium = "^4.8.0"
pandas = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
